# ic2017

./: .gitignore  CMakeLists.txt  Consultas.md  LICENSE  Mapa de la materia.md  OpenBLAS.tar.xz  README.mkd  config.hpp.cmake  ejemplo-con-omp.cpp  ejemplo-simple.cpp  ejemplo-sin-omp.cpp  gnuplot-iostream.h
TP_Final/: CMakeLists.txt  agrupar_por_tuplas.cpp  mlp.cpp  mlp_tres_series.cpp  radial.cpp  radial_tres_series.cpp
TP_Final/Eleccion_de_modelo/: CMakeLists.txt  Mejor MLP - diferencias relativas  Mejor MLP - diferencias relativas.txt  Mejor MLP.txt  Mejor RBF - Diferencias relativas.txt  Mejor RBF.txt  comparar_modelos.cpp  construir_tuplas.cpp  construir_tuplas_prueba.cpp  evaluar_mlp.cpp  evaluar_rbf.cpp  prediccionArima.csv  prediccionArimaDifRel.csv  probar_arima.cpp  probar_arima_diferencias_relativas.cpp  probar_mlp.cpp  probar_mlp_diferencias_relativas.cpp  probar_rbf.cpp  probar_rbf_diferencias_relativas.cpp
TP_Final/datos/: DatosINDEC.xls  Descripcion_datos.txt  Dif_rel_desestacionalizadas.txt  DiferenciasRelativas.csv  Diferencias_relativas.csv  Exportaciones.csv  Exportaciones_limpias.csv  Importaciones.csv  Meses.csv  Tuplas.csv  Ventas.csv  Ventas_desestacionalizadas.csv  Ventas_limpias (copia).csv  Ventas_limpias.csv  datos.ods  errorArimaSalidaDifRel.csv  errorArimaSalidaVentas.csv  errorMlpSalidaDifRel.csv  errorMlpSalidaVentas.csv  errorRbfSalidaDifRel.csv  errorRbfSalidaVentas.csv  ventasXexportaciones.txt  ventasxExpxImp.csv
ejemplos/: CMakeLists.txt  ejemplo-con-omp.cpp  ejemplo-simple.cpp  ejemplo-sin-omp.cpp  funcion1.cpp  funcion1.hpp  funcion2.cpp  funcion2.hpp  graficos.cpp  omp.cpp  sin.txt  variosArchivos.cpp
examen/: ejercicio1.cpp
guia1/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  guia1-ejercicio1.cpp  multicapa.cpp  parametrosConcentInercia.txt  parametrosConcentMulticapa.txt  parametrosIris.txt  parametrosXorMulticapa.txt  particionar.cpp  particionar_iris.cpp  particionarconcentlite.cpp  xorParametrosEntrenamiento.txt  xor_multicapa.cpp
guia1/icgtp1datos/particionesConcent/: particionEnt0  particionEnt1  particionEnt2  particionEnt3  particionEnt4  particionEnt5  particionEnt6  particionEnt7  particionEnt8  particionEnt9  particionPrueba0  particionPrueba1  particionPrueba2  particionPrueba3  particionPrueba4  particionPrueba5  particionPrueba6  particionPrueba7  particionPrueba8  particionPrueba9
guia1/icgtp1datos/particionesIris1Out/: particionEnt0  particionEnt1  particionEnt10  particionEnt100  particionEnt101  particionEnt102  particionEnt103  particionEnt104  particionEnt105  particionEnt106  particionEnt107  particionEnt108  particionEnt109  particionEnt11  particionEnt110  particionEnt111  particionEnt112  particionEnt113  particionEnt114  particionEnt115  particionEnt116  particionEnt117  particionEnt118  particionEnt119  particionEnt12  particionEnt120  particionEnt121  particionEnt122  particionEnt123  particionEnt124  particionEnt125  particionEnt126  particionEnt127  particionEnt128  particionEnt129  particionEnt13  particionEnt130  particionEnt131  particionEnt132  particionEnt133  (+221 more)
guia1/icgtp1datos/particionesIrisKOut/: particionEnt0  particionEnt1  particionEnt2  particionEnt3  particionEnt4  particionEnt5  particionEnt6  particionEnt7  particionEnt8  particionEnt9  particionPrueba0  particionPrueba1  particionPrueba2  particionPrueba3  particionPrueba4  particionPrueba5  particionPrueba6  particionPrueba7  particionPrueba8  particionPrueba9
guia2/: CMakeLists.txt  concentrbf.cpp  dudas.txt  ejercicio1.cpp  ejercicio1b.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  estructura_capas_red.cpp  mlp_salida_lineal.cpp  parametrosMlpIris.txt  parametrosRbfConcent.txt  parametrosRbfIris.txt  parametrosRbfMerval.txt  parametrosRbfXor.txt  particionar_merval.cpp  radial_por_lotes.cpp  som.cpp
guia2/datos/: mervalTuplas.csv
guia2/datos/particionesMerval/: particionEnt0  particionEnt1  particionEnt2  particionEnt3  particionEnt4  particionEnt5  particionEnt6  particionEnt7  particionEnt8  particionEnt9  particionPrueba0  particionPrueba1  particionPrueba2  particionPrueba3  particionPrueba4  particionPrueba5  particionPrueba6  particionPrueba7  particionPrueba8  particionPrueba9
guia3/: CMakeLists.txt  borroso.cpp  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp
guia4/: CMakeLists.txt  colonia_hormigas.cpp  comparaciongeneticoenjambre.cpp  costo_uniforme.cpp  derivadas.wxmx  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  enjambre.cpp  genetico.cpp  metodo_newton.cpp
